# synapsis-challange

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  start-ollama.sh
src/: config.py  list_tools.py  main.py  pyproject.toml  schema.py
